prepared backend for likes and comments
